# Turboaz-MCP

./: .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
scripts/: test_mcp.py
src/: __init__.py  scraper.py  server.py  server_http.py
